static/core/css/base.css
/* ... */
.subtext-size-3 {
    font-size: 16px;
    font-weight: 300;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.5;
    letter-spacing: normal;
    text-align: center;
    color: #818182;
}

.title-card-size-1 {
    font-size: 18px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.5;
    letter-spacing: normal;
}

.title-card-size-2 {
    font-size: 14px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.07;
    letter-spacing: normal;
    color: #0086b4;
}

.title-card-size-3 {
    font-size: 12px;
    font-weight: normal;
    font-stretch: normal;
    font-style: italic;
    line-height: 1.25;
    letter-spacing: normal;
    color: #2b2b2b;
}

.blue-text {
    color: #0086b4;
}

/* start button styles */

.btn-info {
    font-size: 16px;
    font-weight: bold;
    color: #0086b4;
    letter-spacing: 1px;
    line-height: 15px;
    border: 2px solid #0086b4;
    border-radius: 40px;
    background: transparent;
    transition: all 0.3s ease 0s;
}

.btn-info:hover {
    color: #FFF;
    background: #0086b4;
    border: 2px solid #0086b4;
}

.btn-info-inverse {
    font-size: 16px;
    color: #FFF;
    letter-spacing: 1px;
    line-height: 15px;
    border: 2px solid #0086b4;
    border-radius: 40px;
    box-shadow: 0 7px 20px -12px rgba(144, 144, 144, 0.8);
    background-color: #0086b4;
    transition: all 0.3s ease 0s;
    white-space: normal;
}

.btn-info-inverse:hover {
    color: #0086b4;
    background: #FFF;
    border: 2px solid #0086b4;
}

.btn-default {
    font-size: 16px;
    font-weight: bold;
    color: #2b2b2b;
    letter-spacing: 1px;
    line-height: 15px;
    border: 2px solid #2b2b2b;
    border-radius: 40px;
    background: transparent;
    transition: all 0.3s ease 0s;
}

.btn-default:hover {
    color: #FFF;
    background: #2b2b2b;
    border: 2px solid #2b2b2b;
}

.btn-default-inverse {
    font-size: 16px;
    color: #FFF;
    letter-spacing: 1px;
    line-height: 15px;
    border: 2px solid #2b2b2b;
    border-radius: 40px;
    box-shadow: 0 7px 20px -12px rgba(144, 144, 144, 0.8);
    background-color: #2b2b2b;
    transition: all 0.3s ease 0s;
}

.btn-default-inverse:hover {
    color: #2b2b2b;
    background: #FFF;
    border: 2px solid #2b2b2b;
}

.btn-circle.btn-circle-raised {
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
    color: #818182;
}

.btn-circle {
    height: 50px;
    width: 50px;
    color: #818182;
    display: inline-block;
    border-radius: 200rem;
    text-align: center;
    line-height: 50px;
    position: relative;
    z-index: 1;
    transition: color ease .5s;
    transition: box-shadow ease-in-out 0s;
    border: solid 1px #818182;
    background-color: #ffffff;
    margin: 5px;
}

.btn-circle:hover {
    color: #ffffff;
    background-color: #818182;
    border: 1px solid #818182;
}

.btn-circle.btn-info{
    font-size: 20px;
    color: #0086b4;
    border: 2px solid #0086b4;
    border-radius: 40px;
    background: transparent;
    transition: all 0.3s ease 0s;
}

.btn-circle.btn-info:hover {
    color: #FFF;
    background: #0086b4;
    border: 1px solid #0086b4;
}

/* end button styles */

/* Navbar */
.navbar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.navbar-content-container {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.button-navbar {
    min-width: 300px;
    max-width: 300px;
    min-height: 32px;
    max-height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
}

@media (max-width: 992px) {
    .navbar-content-container {
        flex-direction: column;
        align-items: flex-start;
    }

    .button-navbar {
        max-width: 100%;
        margin: 10px 20px;
    }
}

/* End Navbar */

.second-section {
    margin-top: 200px;
}

.padding-second-section {
    padding: 0 110px;
}

.third-section {
    margin-top: 80px;
}

.fourth-section {
    margin-top: 200px;
}

.card.card-guaranties .card-img-top {
    align-items: center;
    display: flex;
    height: 80px;
    justify-content: center;
    margin-top: 1.5em;
}

.card.card-guaranties .card-body {
    display: flex;
    justify-content: center;
}

.card.card-guaranties .card-text{
    font-size: 16px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.5;
    letter-spacing: normal;
    text-align: center;
    color: #f6f6f6;
}

.card-guaranties {
    background-color: #2b2b2b;
    min-height: 250px;
    box-shadow: 0 4px 21px -5px rgba(97, 97, 97, 0.23);
}

.card-guaranties-text {
    font-size: 16px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.5;
    letter-spacing: normal;
    text-align: center;
    color: #f6f6f6;
}

.team-card-title {
    color: #2b2b2b;
    font-size: 20px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    height: 3em;
    line-height: 1.5;
    letter-spacing: normal;
    margin-top: 1em;
}

.team-card-text {
    color: #818182;
    font-size: 16px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.25;
    letter-spacing: normal;
    margin-bottom: 0.75em;
}

.team-card {
    border: none;
}

.team-card>.card-body>ul {
    padding-left: 15px;
}

.team-card>.card-body {
    padding: 10px;
}

.open-source-card-text {
    font-size: 16px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.25;
    letter-spacing: normal;
    color: #818182;
}

.open-source-card-title {
    font-size: 20px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.5;
    letter-spacing: normal;
    text-align: center;
    color: #2b2b2b;
    height: 4em;
}
/* ... */

